# pycon-us-2024-workshop

./: .codecarbon.config  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  prometheus.yaml  pyproject.toml
app/: main.py
app/templates/: carbonIntensity.html
dashboards/: dashboard_carbon_metrics.json  dashboard_python_app.json
