[tool.poetry]
name = "python-prometheus-workshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
prometheus-client = "^0.13.1"
pytest = "^7.0.1"
pytest-httpserver = "^1.0.4"
requests = "^2.27.1"
codecarbon = "^2.3.4"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
ruff = "^0.4.4"

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
